--- a/themes/cintiapub/layout/_partial/archive-post.ejs
+++ b/themes/cintiapub/layout/_partial/archive-post.ejs
@@ -1,5 +1,5 @@
 <div class="image-wrapper overlay-fade-in">
-	<img src="<%- url_for(post.photos[0]) %>" width="200" height="200" itemprop="image">
+	<img src="<%- url_for(post.photos[0]) %>" class="post-thumbnail" itemprop="image">
 	<div class="image-overlay-content">
         <a href="<%- url_for(post.path) %>"><h2><%= post.title %></h2></a>
     </div>
