--- a/themes/cintiapub/layout/_partial/after-footer.ejs
+++ b/themes/cintiapub/layout/_partial/after-footer.ejs
@@ -1,3 +1,5 @@
+<%- js('js/vendor/modernizr.min') %>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<%- js('js/vendor/modernizr') %>
+<%- js('js/vendor/magnific-popup.min') %>
+<%- js('js/script') %>
 <%- partial('google-analytics') %>
