--- a/themes/cintiapub/layout/category.ejs
+++ b/themes/cintiapub/layout/category.ejs
@@ -1,1 +1,1 @@
-<%- partial('_partial/archive', {pagination: config.category, index: true}) %>
+<%- partial('_partial/category', {pagination: 15, index: true}) %>
