--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -19,7 +19,7 @@
               <i class="fa fa-pencil"></i>
               <label style="margin-left: -0.5rem;">Sketches</label>
             </a>
-            <a class="item" href="/about-me">
+            <a class="item" href="/myself">
               <i class="fa fa-user"></i>
               <label>Myself</label>
             </a>
