--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -9,9 +9,10 @@
           </div>
           <div class="large-6 columns">
             <ul class="inline-list right">
-              <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
               <li><a href="https://www.pinterest.com/cintiaromero313" target="_blank"><i class="fa fa-3x fa-pinterest-square"></i></a></li>
               <li><a href="http://instagram.com/cintiaaaromero" target="_blank"><i class="fa fa-3x fa-instagram"></i></a></li>
+              <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cintiaromero" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
               <li><a href="https://www.behance.net/cintiapubf427" target="_blank"><i class="fa fa-3x fa-behance-square"></i></a></li>
             </ul>
           </div>
