--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -1,38 +1,40 @@
-<header id="header">
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="nav-bar right">
-          <div class="icon-bar five-up">
-            <a class="item" href="/">
-              <i class="fa fa-home"></i>
-              <label>Home</label>
-            </a>
-            <a class="item" href="/categories/printed">
-              <i class="fa fa-file-image-o"></i>
-              <label>Printed</label>
-            </a>
-            <a class="item" href="/categories/web">
-              <i class="fa fa-laptop"></i>
-              <label>Web</label>
-            </a>
-            <a class="item" href="/categories/sketches">
-              <i class="fa fa-pencil"></i>
-              <label style="margin-left: -0.5rem;">Sketches</label>
-            </a>
-            <a class="item" href="/myself">
-              <i class="fa fa-user"></i>
-              <label>Myself</label>
-            </a>
-          </div>
-      </div>
-      <h1 id="logo-wrap">
-        <a href="<%- url_for() %>" id="logo"><%= config.title.toUpperCase() %></a>
-      </h1>
-      <% if (theme.subtitle){ %>
-      <h2 id="subtitle-wrap">
-        <a href="<%- url_for() %>" id="subtitle"><%= theme.subtitle %></a>
-      </h2>
-      <% } %>
-    </div>
-  </div>
+<header id="header" class="contain-to-grid">
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li>
+        <h1 id="logo-wrap">
+          <a href="<%- url_for() %>" id="logo"><%= config.title.toUpperCase() %></a>
+        </h1>
+      </li>
+      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar"><a href="#"><i class="fa fa-3x fa-bars"></i></a></li>
+    </ul>
+    
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="divider"></li>
+        <li><a class="item" href="/categories/printed">
+          <i class="fa fa-3x fa-file-image-o"></i>
+          <label>Printed</label>
+        </a></li>
+        <li class="divider"></li>
+        <li><a class="item" href="/categories/web">
+          <i class="fa fa-3x fa-laptop"></i>
+          <label>Web</label>
+        </a></li>
+        <li class="divider"></li>
+        <li><a class="item" href="/categories/sketches">
+          <i class="fa fa-3x fa-pencil"></i>
+          <label style="margin-left: -0.5rem;">Sketches</label>
+        </a></li>
+        <li class="divider"></li>
+        <li><a class="item" href="/myself">
+          <i class="fa fa-3x fa-user"></i>
+          <label>Myself</label>
+        </a></li>
+        <li class="divider"></li>
+      </ul>
+    </section>
+  </nav>
 </header>
