--- a/themes/cintiapub/layout/layout.ejs
+++ b/themes/cintiapub/layout/layout.ejs
@@ -2,10 +2,10 @@
 <body>
   <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
   <section id="main">
-  <div class="row">
-    <hr>
-    <div class="large-12 columns">
-      <%- body %>
+    <div class="row">
+      <div class="large-12 columns">
+        <%- body %>
+      </div>
     </div>
   </section>
   <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
