--- a/themes/cintiapub/layout/layout.ejs
+++ b/themes/cintiapub/layout/layout.ejs
@@ -10,5 +10,6 @@
   </section>
   <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
   <%- partial('_partial/after-footer') %>
+  <%- partial('_partial/photoswipe') %>
 </body>
 </html>
