--- a/themes/cintiapub/source/css/main.scss
+++ b/themes/cintiapub/source/css/main.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 @import "foundation";
 @import "image-hover";
-@import "magnific-popup";
 @import "customizations";
+@import "photoswipe/main";
+@import "photoswipe/default-skin/default-skin";
