--- a/themes/cintiapub/layout/_partial/after-footer.ejs
+++ b/themes/cintiapub/layout/_partial/after-footer.ejs
@@ -2,6 +2,7 @@
 <%- js('//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js') %>
 <%- js('//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js') %>
 <%- js('//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation/foundation.topbar.min.js') %>
-<%- js('js/vendor/magnific-popup.min') %>
+<%- js('js/vendor/photoswipe') %>
+<%- js('js/vendor/photoswipe-ui-default.min') %>
 <%- js('js/script') %>
 <%- partial('google-analytics') %>
