--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -11,6 +11,9 @@ header#header {
 
 	    li.toggle-topbar {
 	    	top: 10px;
+	    	a {
+	    		padding-right: 0;
+	    	}
 	    }
 
 		h1#logo-wrap {
@@ -25,6 +28,10 @@ header#header {
 	    		font-size: 1.3em;
 	    		&:hover {
 					color: #008CBA;
+				}
+
+				@media (max-width: 450px)  {
+					font-size: 1em;
 				}
 		    }
 		}
