--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -1,7 +1,9 @@
 <div class="row">
-  <div class="large-4 small-12 columns">
+  <div class="large-4 medium-4 small-12 columns">
     <div class="image-wrapper overlay-fade-in">
-      <img src="https://farm1.staticflickr.com/762/20837662683_a3073d8e4d_o.png">
+      <a href="/categories/printed">
+        <img src="https://farm1.staticflickr.com/762/20837662683_a3073d8e4d_o.png">
+      </a>
       <div class="image-overlay-content">
         <h2>Printed</h2>
         <p></p>
@@ -9,9 +11,11 @@
       </div>
     </div>
   </div>   
-  <div class="large-4 small-12 columns">
+  <div class="large-4 medium-4 small-12 columns">
     <div class="image-wrapper overlay-fade-in">
-      <img src="https://farm1.staticflickr.com/735/20837662093_b49a310065_o.png">
+      <a href="/categories/web">
+        <img src="https://farm1.staticflickr.com/735/20837662093_b49a310065_o.png">
+      </a>
       <div class="image-overlay-content">
         <h2>Web</h2>
         <p></p>
@@ -19,9 +23,11 @@
       </div>
     </div>
   </div>   
-  <div class="large-4 small-12 columns">
+  <div class="large-4 medium-4 small-12 columns">
     <div class="image-wrapper overlay-fade-in">
-      <img src="https://farm6.staticflickr.com/5686/21467319811_e8dab8c6f5_o.png">
+      <a href="/categories/sketches">
+        <img src="https://farm6.staticflickr.com/5686/21467319811_e8dab8c6f5_o.png">
+      </a>
       <div class="image-overlay-content">
         <h2>Sketches</h2>
         <p></p>
