--- a/themes/cintiapub/layout/_partial/archive-post.ejs
+++ b/themes/cintiapub/layout/_partial/archive-post.ejs
@@ -1,4 +1,4 @@
-<a class="image-link" href="<%- url_for(post.image) %>_h.jpg" data-med-href="<%- url_for(post.image) %>_b.jpg" title="<%= post.client %>: <%= post.title %>" data-client="<%= post.client %>" data-description="<%= post.description %>">
+<a class="image-link" href="<%- url_for(post.image) %>_h.jpg" title="<%= post.client %>: <%= post.title %>" data-client="<%= post.client %>" data-description="<%= post.description %>">
 	<img src="<%- url_for(post.image) %>_n.jpg" itemprop="image">
 	<figure><%= post.client %>: <%= post.title %></figure>
 </a>
