--- a/themes/cintiapub/layout/myself.ejs
+++ b/themes/cintiapub/layout/myself.ejs
@@ -1,4 +1,8 @@
-<p class="avatar">
-    <%- image_tag(gravatar('cintiapub@gmail.com', 150), { class: 'avatar'}) %>
-</p>
-<%- page.content %>
+<div class="row">
+    <div class="large-8 large-centered medium-12 columns">
+		<p class="avatar">
+		    <%- image_tag(gravatar('cintiapub@gmail.com', 150), { class: 'avatar'}) %>
+		</p>
+		<%- page.content %>
+	</div>
+</div>
