--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -68,6 +68,10 @@ section#main {
 	font-family: 'Merriweather', serif;
 	padding-top: 20px;
 
+	.image-wrapper {
+		text-align: center;
+	}
+
 	ul.image-grid {
 		li {
 			height: 200px;
