--- a/themes/cintiapub/layout/_partial/archive-post.ejs
+++ b/themes/cintiapub/layout/_partial/archive-post.ejs
@@ -1,4 +1,4 @@
-<a class="image-link" href="<%- url_for(post.image) %>_h.jpg" title="<%= post.client %>: <%= post.title %>" data-client="<%= post.client %>" data-description="<%= post.description %>">
+<a class="image-link" href="<%- url_for(post.image) %>_h.jpg" title="<%= post.type %> for <%= post.client %> - <%= post.title %>" data-client="<%= post.client %>" data-description="<%= post.description %>" data-software="<%= post.software %>">
 	<img src="<%- url_for(post.image) %>_n.jpg" itemprop="image">
-	<figure><%= post.client %>: <%= post.title %></figure>
+	<figure><%= post.type %> for <%= post.client %> - <%= post.title %></figure>
 </a>
