--- a/themes/cintiapub/source/css/_image-hover.scss
+++ b/themes/cintiapub/source/css/_image-hover.scss
@@ -26,7 +26,8 @@ $global-radius: 4px;
     position: absolute;
     overflow: hidden;
     top: 0;
-    left: 0
+    left: 0;
+    pointer-events: none;
   }
 
   // modifier classes
