handful of fixes

--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -14,6 +14,7 @@
               <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
               <li><a href="https://www.linkedin.com/in/cintiaromero" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
               <li><a href="https://www.behance.net/cintiapubf427" target="_blank"><i class="fa fa-3x fa-behance-square"></i></a></li>
+              <li><a href="mailto:cintiapub+contact@gmail.com"><i class="fa fa-3x fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
