printed to print

--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -14,9 +14,9 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li class="divider"></li>
-        <li><a class="item" href="/categories/printed">
+        <li><a class="item" href="/categories/print">
           <i class="fa fa-3x fa-file-image-o"></i>
-          <label>Printed</label>
+          <label>Print</label>
         </a></li>
         <li class="divider"></li>
         <li><a class="item" href="/categories/web">
