--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="large-4 medium-4 small-12 columns">
     <div class="image-wrapper overlay-fade-in">
-      <a href="/categories/printed">
+      <a href="/categories/print">
         <img src="https://farm1.staticflickr.com/762/20837662683_a3073d8e4d_o.png">
       </a>
       <div class="image-overlay-content">
-        <h2>Printed</h2>
+        <h2>Print</h2>
         <p></p>
-        <a href="/categories/printed" class="button">View gallery</a>
+        <a href="/categories/print" class="button">View gallery</a>
       </div>
     </div>
   </div>   
