--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -1,38 +1,96 @@
 <div class="row">
-  <div class="large-4 medium-4 small-12 columns">
-    <div class="image-wrapper overlay-fade-in">
-      <a href="/categories/print">
-        <img src="https://farm1.staticflickr.com/762/20837662683_a3073d8e4d_o.png">
-      </a>
-      <div class="image-overlay-content">
-        <h2>Print</h2>
-        <p></p>
-        <a href="/categories/print" class="button">View gallery</a>
-      </div>
-    </div>
-  </div>   
-  <div class="large-4 medium-4 small-12 columns">
-    <div class="image-wrapper overlay-fade-in">
-      <a href="/categories/web">
-        <img src="https://farm1.staticflickr.com/735/20837662093_b49a310065_o.png">
-      </a>
-      <div class="image-overlay-content">
-        <h2>Web</h2>
-        <p></p>
-        <a href="/categories/web" class="button">View gallery</a>
-      </div>
-    </div>
-  </div>   
-  <div class="large-4 medium-4 small-12 columns">
-    <div class="image-wrapper overlay-fade-in">
-      <a href="/categories/sketches">
-        <img src="https://farm6.staticflickr.com/5686/21467319811_e8dab8c6f5_o.png">
-      </a>
-      <div class="image-overlay-content">
-        <h2>Sketches</h2>
-        <p></p>
-        <a href="/categories/sketches" class="button">View gallery</a>
-      </div>      
-     </div>
-  </div>   
+  <div class="large-12 columns">
+
+    <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/poster" title="Posters">
+            <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Posters</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/brochure" title="Brochures">
+            <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Brochures</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/logo" title="Logos">
+            <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Logos</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/digital-banner" title="Digital banners">
+            <img src="https://farm1.staticflickr.com/716/22212084128_a64a87f847_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Digital banners</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/social-media" title="Social media">
+            <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Social media</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/e-learning" title="E-learning">
+            <img src="https://farm1.staticflickr.com/698/21296049269_da873efdf3_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>E-learning</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/illustration" title="Illustrations">
+            <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Illustrations</h2>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <div class="image-wrapper overlay-fade-in">
+          <a class="image-link" href="/categories/miscellany" title="Miscellany">
+            <img src="https://farm6.staticflickr.com/5728/21243202188_96a4e1a1bb_h.jpg" itemprop="image">
+          </a>
+          <div class="image-overlay-content">
+            <h2>Miscellany</h2>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
 </div>
