--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -32,7 +32,7 @@
           </ul>
         </li>
         <li><a href="/about">About</a></li>
-        <li><a href="/resume">Resume</a></li>
+        <li><a href="/pdf/resume-cintia-romero.pdf">Resume</a></li>
       </ul>
     </section>
   </nav>
