new header + marina art

--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -25,6 +25,7 @@
 <footer id="footer">
   <div class="row">
     <div class="small-12 medium-6 medium-push-6 columns">
+      <h3 class="logo-footer show-for-small-only">Cintia Romero</h3>
       <form class="footer-form" action="http://formspree.io/cintiapub+contact@gmail.com" method="POST">
         <div class="row">
           <div class="medium-9 medium-push-3 columns">
@@ -51,13 +52,21 @@
       </form>
     </div>
     <div class="small-12 medium-6 medium-pull-6 columns">
+      <h3 class="logo-footer hide-for-small-only">Cintia Romero</h3>
       <p class="footer-links">
         <a href="#">Home</a>
-        <a href="#">Blog</a>
-        <a href="#">Pricing</a>
         <a href="#">About</a>
-        <a href="#">Faq</a>
-        <a href="#">Contact</a>
+        <a href="#">Resume</a>
+      </p>
+      <p class="footer-links">
+        <a href="/categories/poster">Posters</a>
+        <a href="/categories/brochure">Brochures</a>
+        <a href="/categories/logo">Logos</a>
+        <a href="/categories/digital-banner">Digital banners</a>
+        <a href="/categories/social-media">Social media</a>
+        <a href="/categories/e-learning">E-learning</a>
+        <a href="/categories/illustrations">Illustrations</a>
+        <a href="/categories/miscellany">Miscellany</a>
       </p>
       <ul class="inline-list social">
         <li><a href="https://www.pinterest.com/cintiaromero313" target="_blank"><i class="fa fa-2x fa-pinterest-square"></i></a></li>
