--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,700|Poiret+One);
 @import 'foundation/functions';
 
+$blue-link   : #008CBA;
+
 body {
 	background-image: url('/img/subtle_dots.png');
 	font-family: 'Open Sans', sans-serif;
@@ -8,20 +10,26 @@ body {
 
 header#header {
 	nav.top-bar {
-		height: rem-calc(90);
+		height: rem-calc(100);
 
 		.top-bar-section {
 			position: relative;
 			top: 50%;
+
+			li a {
+				&:hover {
+					text-decoration: underline;
+					color: $blue-link;
+				}
+			}
 		}
 
 		.title-area {
-
 			position: relative;
-			top: 58%;
+			top: 54%;
 
 			#logo-wrap {
-				@media screen and (max-width: 550px) {
+				@media screen and (max-width: 610px) {
 					display: none;
 				}
 
@@ -52,29 +60,25 @@ header#header {
 			}
 		}
 
-		.toggle-topbar.menu-icon {
-			top: 0;
-			margin-top: 0;
-		}
 	}
 }
-
-// footer#footer {
-// 	ul.inline-list {
-// 		a {
-// 			color: #333333;
-// 			&:hover {
-// 				color: #008CBA;
-// 			}
-// 		}
-// 	}
-// }
 
 footer#footer {
 	background-color: $gainsboro;
 	text-align: center;
 	font-size: 1.2rem;
 	padding: 1rem;
+
+	a {
+		&:hover {
+			text-decoration: underline;
+			color: $blue-link;
+		}
+	}
+
+	.logo-footer {
+		font-family: 'Poiret One', cursive;
+	}
 
 	.social a {
 		display: inline-block;
