--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -1,27 +1,3 @@
-<!-- <footer id="footer">
-  <footer class="row">
-      <div class="large-12 columns">
-        <hr/>
-        <div class="row">
-          <div class="large-6 columns">
-            <p>&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
-      		Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>.</p>
-          </div>
-          <div class="large-6 columns">
-            <ul class="inline-list right">
-              <li><a href="https://www.pinterest.com/cintiaromero313" target="_blank"><i class="fa fa-3x fa-pinterest-square"></i></a></li>
-              <li><a href="http://instagram.com/cintiaaaromero" target="_blank"><i class="fa fa-3x fa-instagram"></i></a></li>
-              <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/cintiaromero" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
-              <li><a href="mailto:cintiapub+contact@gmail.com"><i class="fa fa-3x fa-envelope"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-  </footer>
-</footer>
- -->
-
 <footer id="footer">
   <div class="row">
     <div class="small-12 medium-6 medium-push-6 columns">
@@ -53,26 +29,26 @@
     </div>
     <div class="small-12 medium-6 medium-pull-6 columns">
       <h3 class="logo-footer hide-for-small-only">Cintia Romero</h3>
-      <p class="footer-links">
+      <ul class="footer-links">
+        <li><a href="/categories/poster">Posters</a></li>
+        <li><a href="/categories/brochure">Brochures</a></li>
+        <li><a href="/categories/logo">Logos</a></li>
+        <li><a href="/categories/digital-banner">Digital banners</a></li>
+        <li><a href="/categories/social-media">Social media</a></li>
+        <li><a href="/categories/e-learning">E-learning</a></li>
+        <li><a href="/categories/illustrations">Illustrations</a></li>
+        <li><a href="/categories/miscellany">Miscellany</a></li>
+      </ul>
+<!--       <p class="footer-links">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Resume</a>
-      </p>
-      <p class="footer-links">
-        <a href="/categories/poster">Posters</a>
-        <a href="/categories/brochure">Brochures</a>
-        <a href="/categories/logo">Logos</a>
-        <a href="/categories/digital-banner">Digital banners</a>
-        <a href="/categories/social-media">Social media</a>
-        <a href="/categories/e-learning">E-learning</a>
-        <a href="/categories/illustrations">Illustrations</a>
-        <a href="/categories/miscellany">Miscellany</a>
-      </p>
+      </p> -->
       <ul class="inline-list social">
-        <li><a href="https://www.pinterest.com/cintiaromero313" target="_blank"><i class="fa fa-2x fa-pinterest-square"></i></a></li>
-        <li><a href="http://instagram.com/cintiaaaromero" target="_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
-        <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-2x fa-twitter-square"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/cintiaromero" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+        <li><a href="https://www.pinterest.com/cintiaromero313" target="_blank"><i class="fa fa-3x fa-pinterest-square"></i></a></li>
+        <li><a href="http://instagram.com/cintiaaaromero" target="_blank"><i class="fa fa-3x fa-instagram"></i></a></li>
+        <li><a href="http://twitter.com/cintiaaa_romero" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/cintiaromero" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
       </ul>
       <p class="copywrite">&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>.<br>
       Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>.</p>
