--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -16,7 +16,8 @@ header#header {
 			position: relative;
 			top: 50%;
 
-			li a {
+			ul li > a {
+				font-size: 1rem;
 				&:hover {
 					text-decoration: underline;
 					color: $blue-link;
@@ -65,32 +66,21 @@ header#header {
 
 footer#footer {
 	background-color: $gainsboro;
-	text-align: center;
 	font-size: 1.2rem;
 	padding: 1rem;
 
-	a {
-		&:hover {
-			text-decoration: underline;
-			color: $blue-link;
-		}
+	h3 {
+		margin-bottom: 20px;
 	}
 
 	.logo-footer {
 		font-family: 'Poiret One', cursive;
 	}
 
-	.social a {
-		display: inline-block;
-		width: 2rem;
-		height: 2rem;
-		background-color: #33383b;
-		border-radius: 2px;
-		font-size: 1.5rem;
-		color: #fff;
-		text-align: center;
-		line-height: 2rem;
-		margin: 0 3px 0 0;
+	.social.inline-list > li {
+		&:first-of-type {
+			margin-left: 0;
+		}
 	}
 
 	.copywrite {
@@ -132,22 +122,32 @@ footer#footer {
 		}
 	}
 
-	.footer-links a {
-		list-style: none;
-		font-weight: normal;
-		color: #fff;
-		padding: 3rem 0 2rem;
-		margin: 0;
-		font-size: 0.875rem;
+	ul.footer-links {
+		list-style-type: none;
+    	margin-left: 0;
 
-		&::after {
-			content: "•";
-			padding: 0 0.2rem 0 0.4rem;
-		}
+		> li {
+			display: inline;
+			white-space: nowrap;
 
-		&:last-child::after {
-			content: "";
-			padding: 0 0.4rem 0 0.8rem;
+			a {
+				color: $graffity;
+
+				&:hover {
+					text-decoration: underline;
+					color: $blue-link;
+				}
+			}
+
+			&::after {
+				content: "•";
+				padding: 0 0.2rem 0 0.4rem;
+			}
+
+			&:last-child::after {
+				content: "";
+				padding: 0 0.4rem 0 0.8rem;
+			}
 		}
 	}
 
@@ -165,9 +165,6 @@ footer#footer {
 
 		.footer-form {
 			.contact {
-				position: absolute;
-				left: -45%;
-				top: 10%;
 			}
 		}
 
